loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:8: error: not found: value nbBaggle
    if (nbBaggle <= 2){
        ^Poucet1:11: error: not found: value nbBaggle
    if (nbBaggle >= 3){
        ^